--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,15 @@
 	        <artifactId>mysql-connector-java</artifactId>
 	        <scope>provided</scope>
    		</dependency>
+   		
+   		<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+		<dependency>
+		    <groupId>org.postgresql</groupId>
+		    <artifactId>postgresql</artifactId>
+		    <version>42.2.23</version>
+		</dependency>
+   		
+   		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
